feat: sources and section names API
get list of available sources and section names through API
