# routes/api.php
@@ -5,3 +5,5 @@ use Illuminate\Support\Facades\Route;
 
 
 Route::get('news', [NewsController::class, 'index']);
+Route::get('sources', [NewsController::class, 'sourcesIndex']);
+Route::get('sections', [NewsController::class, 'sectionsIndex']);
